# a2

./: Cargo.toml  README.md
src/: main.rs
src/commands/: verify.rs
